[gd_scene load_steps=5 format=2]

[ext_resource path="res://main_menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/OptionsMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Roboto/Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=2]
size = 100
use_filter = true
font_data = SubResource( 1 )

[node name="OptionsMenu" type="Control" groups=[
"Menus",
]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.388235, 0.141176, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 20
__meta__ = {
"_edit_group_": true
}

[node name="TitleContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 118.0

[node name="OptionsLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
margin_left = 281.0
margin_right = 703.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 2 )
text = "Options"
align = 1
uppercase = true

[node name="ToggleContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 242.0
margin_top = 138.0
margin_right = 742.0
margin_bottom = 412.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 4
custom_constants/separation = 10

[node name="QueensOnKingsToggle" type="CheckButton" parent="MarginContainer/VBoxContainer/ToggleContainer"]
margin_right = 500.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 44 )
text = "QUEENS ON KINGS"

[node name="TurnCornerToggle" type="CheckButton" parent="MarginContainer/VBoxContainer/ToggleContainer"]
margin_top = 54.0
margin_right = 500.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 44 )
text = "TURN CORNER (KING ON ACE)"

[node name="JokersToggle" type="CheckButton" parent="MarginContainer/VBoxContainer/ToggleContainer"]
margin_top = 108.0
margin_right = 500.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 44 )
text = "JOKERS AS WILDCARDS"

[node name="EmptyFoundationToggle" type="CheckButton" parent="MarginContainer/VBoxContainer/ToggleContainer"]
margin_top = 162.0
margin_right = 500.0
margin_bottom = 206.0
rect_min_size = Vector2( 0, 44 )
text = "START WITH EMPTY FOUNDATION"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ToggleContainer"]
margin_top = 216.0
margin_right = 500.0
margin_bottom = 220.0

[node name="PlaySoundEffectsToggle" type="CheckButton" parent="MarginContainer/VBoxContainer/ToggleContainer"]
margin_top = 230.0
margin_right = 500.0
margin_bottom = 274.0
rect_min_size = Vector2( 0, 44 )
text = "PLAY SOUND EFFECTS"

[node name="ButtonContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 432.0
margin_right = 984.0
margin_bottom = 476.0

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
margin_left = 364.0
margin_right = 620.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 44 )
text = "BACK TO MAIN MENU"
[connection signal="toggled" from="MarginContainer/VBoxContainer/ToggleContainer/QueensOnKingsToggle" to="." method="_on_QueensOnKingsToggle_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ToggleContainer/TurnCornerToggle" to="." method="_on_TurnCornerToggle_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ToggleContainer/JokersToggle" to="." method="_on_JokersToggle_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ToggleContainer/EmptyFoundationToggle" to="." method="_on_EmptyFoundationToggle_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ToggleContainer/PlaySoundEffectsToggle" to="." method="_on_PlaySoundEffectsToggle_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
